{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 235,
  "lineage": "6194ec82-e142-a672-6612-9c6e0663e9ba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009386206eb1d3683",
            "association_id": "eipassoc-0b3a83e8682b5262f",
            "domain": "vpc",
            "id": "eipalloc-009386206eb1d3683",
            "instance": "i-0a2483411954868e8",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-07ea050c9e213d2b7",
            "private_dns": "ip-10-0-1-139.eu-north-1.compute.internal",
            "private_ip": "10.0.1.139",
            "public_dns": "ec2-13-51-22-177.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.51.22.177",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.application",
            "aws_internet_gateway.gw",
            "aws_security_group.application-sg",
            "aws_security_group.balancer-sg",
            "aws_subnet.acme-subnet",
            "aws_vpc.acme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0014ce3e52359afbd",
            "arn": "arn:aws:ec2:eu-north-1:637423607759:instance/i-0a2483411954868e8",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a2483411954868e8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "acme",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07ea050c9e213d2b7",
            "private_dns": "ip-10-0-1-139.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.139",
            "public_ip": "16.171.227.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0964ff1a7f66dc13c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0014b30ae1e9c701b",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-059f2dc027aeb6127"
            ]
          },
          "dependencies": [
            "aws_security_group.application-sg",
            "aws_security_group.balancer-sg",
            "aws_subnet.acme-subnet",
            "aws_vpc.acme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:637423607759:internet-gateway/igw-0bd5db9595f6fe229",
            "id": "igw-0bd5db9595f6fe229",
            "owner_id": "637423607759",
            "vpc_id": "vpc-025b630b326d8e81c"
          },
          "dependencies": [
            "aws_vpc.acme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:637423607759:loadbalancer/app/balanceador-acme/ea9b740d0745af40",
            "arn_suffix": "app/balanceador-acme/ea9b740d0745af40",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "balanceador-acme-728706381.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:637423607759:loadbalancer/app/balanceador-acme/ea9b740d0745af40",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "balanceador-acme",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01f743b750962834e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0014b30ae1e9c701b"
              },
              {
                "subnet_id": "subnet-0b5815e600bdb76a6"
              }
            ],
            "subnets": [
              "subnet-0014b30ae1e9c701b",
              "subnet-0b5815e600bdb76a6"
            ],
            "vpc_id": "vpc-025b630b326d8e81c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "aws_security_group.balancer-sg",
            "aws_subnet.acme-subnet",
            "aws_subnet.acme-subnet2",
            "aws_vpc.acme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:637423607759:listener/app/balanceador-acme/ea9b740d0745af40/f8a697e0100a15f6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:637423607759:targetgroup/tg-http/9519c4b2aecf4e6a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:637423607759:listener/app/balanceador-acme/ea9b740d0745af40/f8a697e0100a15f6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:637423607759:loadbalancer/app/balanceador-acme/ea9b740d0745af40",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.balancer",
            "aws_lb_target_group.tg-http",
            "aws_security_group.balancer-sg",
            "aws_subnet.acme-subnet",
            "aws_subnet.acme-subnet2",
            "aws_vpc.acme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:637423607759:targetgroup/tg-http/9519c4b2aecf4e6a",
            "arn_suffix": "targetgroup/tg-http/9519c4b2aecf4e6a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:637423607759:targetgroup/tg-http/9519c4b2aecf4e6a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-http",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-025b630b326d8e81c"
          },
          "dependencies": [
            "aws_vpc.acme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:637423607759:targetgroup/tg-https/a2aa69d194db7d46",
            "arn_suffix": "targetgroup/tg-https/a2aa69d194db7d46",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:637423607759:targetgroup/tg-https/a2aa69d194db7d46",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-https",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-025b630b326d8e81c"
          },
          "dependencies": [
            "aws_vpc.acme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "application-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:637423607759:targetgroup/tg-http/9519c4b2aecf4e6a-20240219235318823100000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:637423607759:targetgroup/tg-http/9519c4b2aecf4e6a",
            "target_id": "i-0a2483411954868e8"
          },
          "dependencies": [
            "aws_instance.application",
            "aws_lb_target_group.tg-http",
            "aws_security_group.application-sg",
            "aws_security_group.balancer-sg",
            "aws_subnet.acme-subnet",
            "aws_vpc.acme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "application-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:637423607759:targetgroup/tg-https/a2aa69d194db7d46-20240219235318544500000003",
            "port": 443,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:637423607759:targetgroup/tg-https/a2aa69d194db7d46",
            "target_id": "i-0a2483411954868e8"
          },
          "dependencies": [
            "aws_instance.application",
            "aws_lb_target_group.tg-https",
            "aws_security_group.application-sg",
            "aws_security_group.balancer-sg",
            "aws_subnet.acme-subnet",
            "aws_vpc.acme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "acme-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:637423607759:route-table/rtb-03f82a8d617239323",
            "id": "rtb-03f82a8d617239323",
            "owner_id": "637423607759",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd5db9595f6fe229",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-025b630b326d8e81c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.acme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "asociacion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0544b188e7dd1ab73",
            "route_table_id": "rtb-03f82a8d617239323",
            "subnet_id": "subnet-0014b30ae1e9c701b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.acme-route",
            "aws_subnet.acme-subnet",
            "aws_vpc.acme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "application-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:637423607759:security-group/sg-059f2dc027aeb6127",
            "description": "PErmite la entrada de trafico http y https solo desde el balanceador ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059f2dc027aeb6127",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f743b750962834e"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f743b750962834e"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "acme-application-sg",
            "name_prefix": "",
            "owner_id": "637423607759",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-025b630b326d8e81c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.balancer-sg",
            "aws_vpc.acme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "balancer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:637423607759:security-group/sg-01f743b750962834e",
            "description": "sg para el balanceador",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f743b750962834e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "acme-balancer-sg",
            "name_prefix": "",
            "owner_id": "637423607759",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-025b630b326d8e81c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.acme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "acme-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:637423607759:subnet/subnet-0014b30ae1e9c701b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0014b30ae1e9c701b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423607759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-025b630b326d8e81c"
          },
          "dependencies": [
            "aws_vpc.acme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "acme-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:637423607759:subnet/subnet-0b5815e600bdb76a6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5815e600bdb76a6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637423607759",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-025b630b326d8e81c"
          },
          "dependencies": [
            "aws_vpc.acme-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "acme-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:637423607759:vpc/vpc-025b630b326d8e81c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0864e40612820929b",
            "default_route_table_id": "rtb-0ed1cbe12b2680a28",
            "default_security_group_id": "sg-01beb60183f0a2bcc",
            "dhcp_options_id": "dopt-05a86a284baf168da",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-025b630b326d8e81c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ed1cbe12b2680a28",
            "owner_id": "637423607759",
            "tags": {
              "Name": "acme_prueba"
            },
            "tags_all": {
              "Name": "acme_prueba"
            }
          }
        }
      ]
    }
  ]
}